...
    "cancel": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Cancel"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "取消"
...
    "office": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Office"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "通勤"
...
